--- a/package.json
+++ b/package.json
@@ -16,5 +16,8 @@
   "bugs": {
     "url": "https://github.com/dskromskyi/khai-node-js-course/issues"
   },
-  "homepage": "https://github.com/dskromskyi/khai-node-js-course#readme"
+  "homepage": "https://github.com/dskromskyi/khai-node-js-course#readme",
+  "dependencies": {
+    "express": "^5.1.0"
+  }
 }
